dnl Copyright 2006-2009 Nick Mathewson; See COPYING for license information.

AC_INIT(cminion, 0.1)

AM_INIT_AUTOMAKE
AM_CONFIG_HEADER(mix3config_pre.h)

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_LIBTOOL
AC_PROG_SED

dnl AC_CONFIG_FILES([Makefile])

if test "$GCC" = yes; then
    CFLAGS="$CFLAGS -g -O2 -Wall -W -Wbad-function-cast -Wdeclaration-after-statement -Wmissing-field-initializers  -Wnested-externs -Wpointer-arith -Wredundant-decls -Wstrict-prototypes -Wundef -Wwrite-strings -pedantic"
    dnl -Wmissing-prototype -Wswitch-enums
else
    CFLAGS="$CFLAGS -g -O"
fi

AC_OUTPUT(Makefile src/Makefile test/Makefile)